<resources>
    <string name="app_name">hamiNavodayaHo</string>
    <string name="haminavodayaho">HamiNavodayaHo</string>
    <string name="developed_by">developed by</string>
    <string name="p_r_y_o_g">p r y o g</string>
    <string name="enter_the_mobile_number">Enter the Mobile number :</string>
    <string name="enter_your_email">Enter your email :</string>
    <string name="plus">+</string>
    <string name="_91">+91</string>
    <string name="_6391348273">6391348273</string>
    <string name="pryog_email">support@haminavodayaho.in</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp">OTP</string>
    <string name="_continue">Continue</string>
    <string name="logo">Logo</string>
    <string name="document_verification">Document Verification</string>
    <string name="upload_document">Upload Document</string>
    <string name="no_file_selected">No file selected</string>
    <string name="submit_for_verification">Submit for Verification</string>
    <string name="refresh">Refresh</string>
    <string name="menu">Menu</string>
    <string name="tab">Tab</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="timestamp">timestamp</string>
    <string name="description">Description</string>
    <string name="_12">12</string>
    <string name="support">Support</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="location">Location</string>
    <string name="category">Category</string>
    <string name="link">Link</string>
    <string name="details">Details :</string>
    <string name="bio">Bio</string>
    <string name="contact">Contact/Email</string>
    <string name="email">Email/Contact</string>
    <string name="education">Education</string>
    <string name="pg_institute">PG Institute</string>
    <string name="ug_institute">UG Institute</string>
    <string name="school">School</string>
    <string name="document">Document</string>
    <string name="update_profile">Update Profile</string>
    <string name="pg_year">PG Year</string>
    <string name="ug_year">UG Year</string>
    <string name="school_year">School Year</string>
    <string name="save">Save</string>
    <string name="post_graduation">Post Graduation</string>
    <string name="under_graduation">Under Graduation</string>
    <string name="institute">Institute</string>
    <string name="document_name">Document Name</string>
    <string name="data">Data</string>
    <string name="back">Back</string>
    <string name="offline">Offline</string>
    <string name="audio_call">Audio Call</string>
    <string name="type_here">Type here..</string>
    <string name="send">Send</string>
    <string name="select">Select</string>
    <string name="status">Status</string>
    <string name="chat_with_me">Chat with me ..</string>
    <string name="select_file">Select File</string>
    <string name="create_a_post">Create a Post</string>
    <string name="post">Post</string>
    <string name="url_link">Url/Link</string>
    <string name="create_event">Create Event</string>
    <string name="submit">Submit</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>
    <string name="privacy">Privacy</string>
    <string name="change_theme">Change Theme</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="app_description">Hami Navodaya Ho is an innovative social media platform built specifically for the vibrant and diverse Navodaya community across India and beyond. Our goal is to bridge the gap between current students, alumni, teachers, and staff of Jawahar Navodaya Vidyalayas (JNVs) by offering a unified digital space for communication, collaboration, and celebration of shared experiences. \n
        \nDesigned with a deep understanding of the values and culture of Navodaya, the platform offers features such as community groups, event updates, alumni networking, career guidance, and content sharing. Whether it`s staying updated with the latest campus activities, reconnecting with batchmates, or contributing to school development, Hami Navodaya Ho is the heartbeat of the community.\n
        \nWe are committed to providing a secure, inclusive, and ad-free environment that respects your privacy and encourages meaningful interactions. Our platform is constantly evolving with user feedback, and is powered by a team that deeply believes in the spirit of `Navodaya Parivar`.\n
        \nJoin us and be a part of a movement that celebrates unity, diversity, and lifelong learning. Hami Navodaya Ho – more than just a network, it’s a family.
</string>
    <string name="app_email">Contact us</string>
    <string name="let_s_chat">Let\'s chat 😊💬✨</string>
    <string name="call">Call</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="comments">Comments :</string>
    <string name="pg_details">PG Details</string>
    <string name="year">Year</string>
    <string name="ug_details">UG Details</string>
    <string name="school_details">School Details</string>
    <string name="call_from_pryog">Call from: pryog</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
</resources>