<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:title="@string/help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_feedback"
        android:title="@string/feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/log_out"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_theme"
        android:title="@string/change_theme"
        app:showAsAction="never" />

</menu>
