<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    tools:context=".DocVerify">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/document_verification"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnUploadDoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_document"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/fileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_file_selected"
        android:layout_marginTop="16dp"
        android:textColor="#888888"/>

    <Button
        android:id="@+id/btn_submit_doc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_for_verification"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/verifyStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:layout_gravity="center"
        android:layout_marginTop="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <include
        android:id="@+id/included"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/pryog_signature"/>

</LinearLayout>
