<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".CreateEvent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/purple_700"
            android:gravity="center"
            android:text="@string/create_event"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            tools:ignore="UselessParent,WebViewLayout">
            <ImageView
                android:id="@+id/eventData"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/gray"
                android:contentDescription="@string/data"
                android:minHeight="200dp"
                android:layout_centerInParent="true"/>
            <Button
                android:id="@+id/selectFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/select_file"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/eventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Description"
            android:padding="10dp"
            android:inputType="text"
            android:minHeight="100dp"
            android:background="@drawable/bg_circle"
            tools:ignore="LabelFor" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/url_link"/>
        <EditText
            android:id="@+id/eventLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Link"
            android:inputType="text"
            tools:ignore="LabelFor" />
        <Button
            android:id="@+id/btnEventSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit"/>
    </LinearLayout>
</ScrollView>